--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "coffee-loader": "^3.0.0",
+    "coffeescript": "1.12.7",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0",
